[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "scripts"
version = "0.0.1"
description = "repo for the final project of the DS 1001 course"
authors = [
  { name = "Brian Wright" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "==3.12.1"


[tool.ruff]
line-length = 99
src = ["scripts"]
include = ["pyproject.toml", "scripts/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["scripts"]
force-sort-within-sections = true

